--- a/aces/dashboard/ACES/Views/Assignments/Edit.cshtml
+++ b/aces/dashboard/ACES/Views/Assignments/Edit.cshtml
@@ -41,12 +41,12 @@
                 <input asp-for="DueDate" class="form-control" />
                 <span asp-validation-for="DueDate" class="text-danger"></span>
             </div>
-            <input name="CourseId" value="@ViewBag.CourseId" type="hidden" />  <!--Section ID shouldn't be something that can be changed, hidden value passed-->
-            <div class="form-group">
+            <input name="CourseId" value="@ViewBag.CourseId" type="hidden" />  <!--Section ID shouldn't be something that can be changed, hidden value passed-->            
+            @*<div class="form-group">
                 <label asp-for="JSONCode" class="control-label"></label>
                 <textarea asp-for="JSONCode" class="form-control" rows="15"></textarea>
                 <span asp-validation-for="JSONCode" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <label asp-for="CanvasLink" class="control-label"></label>
                 <input asp-for="CanvasLink" class="form-control" />
