--- a/aces/dashboard/ACES/Views/Assignments/Index.cshtml
+++ b/aces/dashboard/ACES/Views/Assignments/Index.cshtml
@@ -1,11 +1,11 @@
-﻿@model IEnumerable<ACES.Models.Assignment>
+﻿@model List<ACES.Models.Assignment>
 
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Assignments</h2>
+<h2>Your Courses</h2>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -13,34 +13,23 @@
 <table class="table">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.RepositoryUrl)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CourseId)
-            </th>
+            <th style="padding-left: 30px">Assignment</th>
+            <th style="padding-left: 30px">Repository URL</th>
+            <th style="padding-left: 30px">DueDate</th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+@foreach (var assignment in Model) {
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.RepositoryUrl)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CourseId)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Tweak</a> |
-                <!-- <a asp-action="Details" asp-route-id="@item.Id">Details</a> | ************Not implemented in controller, not needed-->
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+            <td style="padding-left: 30px">@assignment.Name</td>
+            <td style="padding-left: 85px">@assignment.RepositoryUrl</td>
+            <td style="padding-left: 70px">@assignment.DueDate</td>
+            <td style="padding-left: 300px">
+                <a asp-action="Edit" asp-route-id="@assignment.Id">Edit</a> |
+                <a asp-action="CourseAssignments" asp-route-id="@assignment.Id">Assignments</a> |
+                <a asp-action="Delete" asp-route-id="@assignment.Id">Delete</a> |
+                <a asp-action="Archive" asp-route-id="@assignment.Id">Archive</a>
             </td>
         </tr>
 }
