--- a/aces/dashboard/ACES/Views/Json/Delete.cshtml
+++ b/aces/dashboard/ACES/Views/Json/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model ACES.Models.JSON
+﻿@model List<ACES.Models.JSON>
 
 @{
     ViewData["Title"] = "Delete";
@@ -9,50 +9,39 @@
 
 <h3>Are you sure you want to delete these Watermarks?</h3>
 <div>
+        
+    <table class="table">
+        <thead>
+            <tr>
+                <th>File Name</th>
+                <th>Line Numbers</th>
+                <th>Replace watermark</th>
+                <th>Comment</th>
+                <th>Whitespace Lines</th>
+                <th>Random String Lines</th>                
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var json in Model)
+            {
+            <tr>
+                <td>@json.FileName</td>
+                <td>@json.LineNumbers</td>
+                <td>@json.ReplaceWatermark</td>
+                <td>@json.Comment</td>
+                <td>@json.WhitespaceLines</td>
+                <td>@json.RandomStringLines</td>                                                      
+                                                                                     
+            </tr>            
+            }
+        </tbody>
+    </table>
     
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FileName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FileName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.LineNumbers)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.LineNumbers)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ReplaceWatermark)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ReplaceWatermark)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Comment)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Comment)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.WhitespaceLines)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.WhitespaceLines)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.RandomStringLines)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.RandomStringLines)
-        </dd>
-    </dl>
     
     <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
+        <input type="hidden" asp-for="@Model[0].AssignmentId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-controller="Assignments" asp-action="AssignmentsJson" asp-route-id="@Model.AssignmentId">Back to List</a>
+        <a asp-controller="Assignments" asp-action="AssignmentsJson" asp-route-id="@Model[0].AssignmentId">Back to List</a>
     </form>
 </div>
