Add course button

--- a/aces/dashboard/ACES/Views/StudentInterface/Index.cshtml
+++ b/aces/dashboard/ACES/Views/StudentInterface/Index.cshtml
@@ -30,6 +30,7 @@
         }
     </tbody>
 </table>
+<a asp-action="Create" asp-route-courseId="@ViewBag.Id">Add Course</a>
 @if (ViewBag.IsMessage == "true")
 {
     <div class="alert alert-primary alert-dismissible hide" id="statusBox">
